<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_toolbar"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorWhite" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_display"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:layout_constraintTop_toBottomOf="@id/tool_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="@dimen/margin_double"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/et_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@id/iv_display"
        app:layout_constraintBottom_toBottomOf="@id/iv_display"
        android:padding="8dp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/margin_standard"
        app:layout_constraintTop_toBottomOf="@id/iv_display"
        android:layout_marginTop="@dimen/margin_double"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_id"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"/>


</androidx.constraintlayout.widget.ConstraintLayout>

