<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".5" />

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_double"
        android:layout_marginTop="@dimen/margin_max"
        android:layout_marginRight="@dimen/margin_double"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_half" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxEms="30"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_half"
            android:paddingEnd="@dimen/margin_half"
            android:textColorHint="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_double"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_double"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_email">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_half" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_half"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxEms="15"
            android:maxLines="1"
            android:paddingStart="@dimen/margin_half"
            android:paddingEnd="@dimen/margin_half"
            android:textColorHint="@color/colorPrimary" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_double"
        android:paddingStart="@dimen/margin_standard"
        android:paddingEnd="@dimen/margin_standard"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/ll_password" />
</androidx.constraintlayout.widget.ConstraintLayout>